--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(showCoefTable)
 export(showTable)
 export(showValueTable)
 export(standardizeNumeric)
+export(yearCateAndCont)
 importFrom(dplyr,across)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
